# koru-delta

./: .gitignore  AGENTS.md  AGENT_KIMI_CHECKLIST.md  ALIS_AI.md  ALIS_AI_INTEGRATION_CHECKLIST.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLI_GUIDE.md  CLUSTER_SYNC_STATUS.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONTRIBUTING.md  CORE_IDENTITY.md  Cargo.toml  DESIGN.md  DIRECTION_CHECK.md  E2E_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  KORU_DELTA_CONSCIOUSNESS_ARCHITECTURE.md  KORU_DELTA_LCA_ASSESSMENT.md  KORU_DELTA_LCA_IMPLEMENTATION_CHECKLIST.md  LCA_ALIGNMENT_CHECKLIST.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_REPORT.md  PHASE6_ASSESSMENT.md  PHASE6_FINAL_REPORT.md  PHASE6_PLAN.md  PHASE6_STATUS.md  PHASE7_PLAN.md  PHASE7_PROGRESS.md  PHASE7_READINESS.md  PHASE8_FINAL.md  PHASE8_PLAN.md  PHASE8_STATUS.md  PRE_RELEASE_VALIDATION_REPORT.md  PROBLEM_VALIDATION.md  PRODUCT_ASSESSMENT.md  README.md  (+5 more)
.github/workflows/: ci.yml  release.yml
benches/: README.md  core_operations.rs  lca_operations.rs  snsw_benchmark.rs  snsw_strengths.rs  snsw_vs_hnsw.rs
bindings/javascript/: DESIGN.md  JS_API.md  README.md  WASM_QUICKSTART.md  index.d.ts  package.json  test.js  test_fixed.js
bindings/javascript/docs/: API.md  LCA_ARCHITECTURE.md
bindings/javascript/examples/: browser-basic.html  browser-semantic-search.html
bindings/js/: README.md  package.json
bindings/python/: .gitignore  API_DESIGN.md  Cargo.toml  IMPLEMENTATION_DESIGN.md  MANIFEST.in  README.md  pyproject.toml
bindings/python/docs/: DISTINCTION_BASED_VECTOR_SEARCH.md  VECTOR_SEARCH_DESIGN.md  api.rst  conf.py  examples.rst  index.rst  lca_architecture.rst
bindings/python/examples/: 01_quickstart.py  02_ai_agent.py  03_audit_trail.py  04_config_management.py  koru_delta_tutorial.ipynb  rag_pipeline.py
bindings/python/koru_delta/: __init__.py  __init__.pyi  agent_memory.py  agent_memory.pyi  config.py  config.pyi
bindings/python/koru_delta/integrations/: README.md  __init__.py  chunking.py  hybrid.py  langchain.py  llamaindex.py
bindings/python/src/: database.rs  lib.rs  types.rs  utils.rs  vector.rs
bindings/python/tests/: test_basic.py  test_integrations.py
docs/: API_REFERENCE.md  BEYOND_CAUSAL_DB.md  DESIGN_v2.md  FUTURE_IDEAS.md  KORU_AI_ECOSYSTEM_DESIGN.md  PARADIGM_COMPARISON.md  PROJECT_STATUS.md  SNSW_ARCHITECTURE_v2.2.0.md  SNSW_RECALL_SOLUTION.md  THE_CAUSAL_DATABASE.md  V2_TODO.md  WHY_V2.md
examples/: README.md  alis_ai_integration.rs  batch_performance_demo.rs  cluster_demo.rs  cluster_e2e_test.rs  complete_validation.rs  crisis_coordination_demo.rs  e2e_validation.rs  ecommerce_demo.rs  snsw_advanced_demo.rs  snsw_benchmark_simple.rs  snsw_demo.rs  stress_test.rs  taskflow_simulation.rs
examples/browser/: index.html
examples/cloudflare-worker/: index.js  wrangler.toml
examples/deno/: index.ts
examples/nodejs/: index.js
examples/wasm/: README.md  index.html
scripts/: build-all.sh  build-wasm.sh  check.sh  install.sh  publish_crates.sh  publish_npm.sh  publish_pypi.sh  validate_cli.sh  validate_cluster.sh
src/: causal_graph.rs  cluster.rs  core.rs  core_v2.rs  error.rs  http.rs  lib.rs  mapper.rs  network.rs  network_agent.rs  network_process.rs  orchestrator.rs  persistence.rs  query.rs  reference_graph.rs  roots.rs  sensory_interface.rs  storage.rs  storage_agent.rs  subscriptions.rs  types.rs  vector_agent.rs  views.rs  wasm.rs  workspace_agent.rs
src/actions/: mod.rs
src/auth/: capability.rs  http.rs  identity.rs  manager.rs  mod.rs  session.rs  storage.rs  types.rs  verification.rs
src/engine/: mod.rs
src/lifecycle/: access_tracker.rs  importance_scorer.rs  mod.rs  transition_planner.rs
src/memory/: agent.rs  cold.rs  deep.rs  hot.rs  mod.rs  warm.rs  workspace.rs
src/processes/: consolidation.rs  distillation.rs  genome_update.rs  mod.rs
src/reconciliation/: bloom.rs  merkle.rs  mod.rs  world.rs
src/runtime/: mod.rs  sync.rs
src/vector/: causal_index.rs  distinction_integration.rs  hnsw.rs  index.rs  mod.rs  snsw.rs  snsw_advanced.rs  types.rs
src/wasm/: storage.rs
tests/: cluster_falsification_tests.rs  cluster_tests.rs  falsification_tests.rs  http_api_tests.rs  integration_tests.rs  lca_integration_tests.rs  phase3_tests.rs  phase7_tests.rs  regression_tests.rs  vector_tests.rs  wasm_tests.rs
