[package]
name = "koru-delta"
version = "2.0.0"
edition = "2021"
authors = ["Sawyer Kent <sawyerkent.me@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The invisible database: causal, consistent, and everywhere—without configuration"
repository = "https://github.com/swyrknt/koru-delta"
keywords = ["database", "distributed", "causal", "time-travel", "wasm"]
categories = ["database", "wasm"]
readme = "README.md"

[dependencies]
# Core distinction engine
koru-lambda-core = "1.2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
dashmap = "6.0"

# Async runtime (minimal features for WASM compatibility)
tokio = { version = "1.0", features = ["macros", "time"], default-features = false }

# Hashing & Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
hmac = "0.12"
bs58 = "0.5"
hex = "0.4"
crc32fast = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
dirs = "5.0"
similar = "2.6"  # For text diffing

# Networking (for distributed mode, non-WASM only)
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
rand = "0.8"

# Query engine
regex = "1.10"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP API (non-WASM only)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# Optional WASM support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
# Testing
proptest = "1.0"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["http"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "js-sys", "console_error_panic_hook", "getrandom"]
http = ["axum", "tower", "reqwest"]

# Platform-specific dependencies for non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "net", "io-util", "sync", "signal"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kdelta"
path = "src/bin/kdelta.rs"

[[bench]]
name = "core_operations"
harness = false
