[package]
name = "koru-delta-python"
version = "2.0.0"
edition = "2021"
authors = ["Sawyer Kent <sawyerkent.me@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Python bindings for KoruDelta - the database for AI agents"
repository = "https://github.com/swyrknt/koru-delta"

[lib]
name = "koru_delta_python"
crate-type = ["cdylib"]

[dependencies]
# KoruDelta core
koru-delta = { path = "../.." }

# PyO3
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py39"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# NumPy integration
numpy = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread"] }

# Tracing (for debug logging)
tracing = "0.1"

# For agent memory content hashing
hex = "0.4"

# Time handling
chrono = "0.4"

[dev-dependencies]
# Testing
# Tests are in Python layer
